fix layout issue in settings

--- a/src/app/core/settings/containers/settings.component.scss
+++ b/src/app/core/settings/containers/settings.component.scss
@@ -107,4 +107,8 @@ form {
     }
 }
 
-
+@media (max-width: 768px){
+    form {
+        width: 90%;
+    }
+}
